@@ -1,4 +1,4 @@
 <span i18n:translate="">
-  <span i18n:name="name"><b>Jim</b></span> was born in
-  <span i18n:name="country">the USA</span>.
+  <span tal:omit-tag="" i18n:name="name"><b>Jim</b></span> was born in
+  <span tal:omit-tag="" i18n:name="country">the USA</span>.
 </span>
