@@ -1,5 +1,5 @@
 <p i18n:translate="verify">Your contact email address is recorded as
-<span i18n:name="email">
+<span tal:omit-tag="" i18n:name="email">
 <a href="user@host.com"
    tal:attributes="href string:mailto:${request/submitter}"
    tal:content="request/submitter">
