@@ -2,5 +2,5 @@
 <span i18n:translate="">
   <span tal:replace="string:<foo>" i18n:name="name1" />
   <span tal:replace="structure string:<bar />" i18n:name="name2" />
-  <span i18n:name="name3"><b>some</b> <i>text</i></span>
+  <span tal:omit-tag="" i18n:name="name3"><b>some</b> <i>text</i></span>
 </span>
